# copulas

./: .gitignore  pyproject.toml
scripts/: example_copulas.py
src/copulalib/copulas/: archimedean.py  base.py  comonotonic.py  empirical.py  gaussian.py  independence.py  student_t.py  vine.py
src/copulalib/distributions/: base.py  beta.py  empirical.py  gamma.py  lognormal.py  normal.py  pareto.py
src/copulalib/utils/: correlation.py
tests/distributions/: test_beta.py  test_empirical.py  test_gamma.py  test_pareto.py
